--- a/css/style.css
+++ b/css/style.css
@@ -1085,3 +1085,7 @@ footer .col-md-5 {
   transition: opacity 0.5s ease-out; /* Optional: Smooth transition */
 }
 
+/* ring */
+.ring {
+  margin-left: 30px;
+}
